--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -36,3 +36,17 @@
     transition: transform 500ms ease-in, opacity .2s ease-in;
   }
   
+.page__wrapper{
+  margin-top: 30px;
+  display: flex;
+}
+.page{
+  padding: 10px;
+  border: 1px solid blue;
+  cursor:pointer;
+}
+.page__current{
+  border: 5px solid pink;
+  font-weight: bold;
+
+}
