--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -5,7 +5,8 @@
 }
 #root{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 .App{
     width: 800px;
@@ -36,17 +37,3 @@
     transition: transform 500ms ease-in, opacity .2s ease-in;
   }
   
-.page__wrapper{
-  margin-top: 30px;
-  display: flex;
-}
-.page{
-  padding: 10px;
-  border: 1px solid blue;
-  cursor:pointer;
-}
-.page__current{
-  border: 5px solid pink;
-  font-weight: bold;
-
-}
